# python-mazes

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: tests.yml
src/mazes/: __init__.py  cli.py  command_line.py  direction.py  distances.py  grid.py  image_renderer.py  maze.py  maze_generator.py  maze_state.py  maze_stepper.py  text_renderer.py
src/mazes/algorithms/: Sidewinder.py  __init__.py  algorithm.py  binary_tree.py  dijkstra.py  recursive_backtracker.py  sidewinder.py  utils.py
src/mazes/core/: __init__.py  maze_state.py  maze_stepper.py
src/mazes/game/: color_gradient.py  command_line.py  game_loop.py  game_maze.py  utils.py
src/mazes/renderers/: __init__.py  image_renderer.py  text_renderer.py
tests/: asserts.py  direction_test.py  distances_test.py  generator_test.py  grid_test.py  maze_generator_test.py  maze_state_test.py  maze_stepper_test.py  maze_test.py  text_render_test.py
tests/algorithms/: binary_tree_test.py  dijkstra_test.py  recursive_backtracker_test.py  sidewinder_test.py  test_binary_tree.py
