[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazes"
version = "0.0.1"
requires-python = ">=3.11"

dependencies = [
    "Pillow ~=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest ~=7.4.0",
    "mypy ~=1.5.0",
    "black ~=23.7.0",
    "types-Pillow ~=10.0.0",
]

[project.scripts]
maze = "mazes.cli:maze_cli"

[tool.pytest.ini_options]
pythonpath = "tests"

[tool.setuptools.package-data]
"mazes" = ["py.typed"]
