[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazes"
version = "0.0.1"
requires-python = ">=3.11"

dependencies = [
    "typing_extensions ~= 4.7.0",
    "Pillow ~= 10.0.0",
    "pygame ~= 2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest ~=7.4.0",
    "mypy ~=1.5.0",
    "black ~=23.7.0",
    "types-Pillow ~=10.0.0",
    "tox ~= 4.11.0",
    "isort ~= 5.12.0",
    "flake8 ~= 6.1.0",
    "pre-commit ~= 3.4.0",
]

[project.scripts]
maze = "mazes.command_line:main"
maze-game = "mazes.game.game_loop:main"

[tool.pytest.ini_options]
pythonpath = "tests"

[tool.setuptools.package-data]
"mazes" = ["py.typed"]
